Wed Aug 12 15:14:19 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * MPC/config/utility.mpb
        * MPC/config/vcwarnings.mpb
        * MPC/config/xsc_be.mpb
        * MPC/config/xsc_static.mpb
        * MPC/config/xscrt.mpb
        * XSC/XSC.mpc
          Use prop:microsoft to make these files easier to maintain

Wed Aug 12 15:11:19 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * XSCRT/XMLSchema/id_map.hpp:
          Added missing Id tag

Mon Aug  3 19:24:19 UTC 2009  William R. Otte  <wotte@dre.vanderbilt.edu>

        * contrib/Utility.mpc:

	  utility no longer under ACE.

Sun Jun 21 21:22:20 UTC 2009  James H. Hill  <hillj@dre.vanderbilt.edu>

        * contrib:

          . Updated the externals.

Sun Jun 21 21:17:29 UTC 2009  James H. Hill  <hillj@dre.vanderbilt.edu>

        * contrib/CCF:

          . Updated the externals.

Fri Jun 19 11:33:19 UTC 2009  William R. Otte  <wotte@dre.vanderbilt.edu>

        * Examples/Reference:
        * Examples/Reference/reference.xml:
        * Examples/Reference/reference.xsd:

          Example of idrefs.

        * MPC/config/utility.mpb:

          Compile fix.

        * XSC/be/CXX/Header.cpp:
        * XSC/be/CXX/Inline.cpp:
        * XSC/be/CXX/Source.cpp:

          Errata that I forgot to check in from the refcounted ptr fix.

Mon Jun  8 23:16:48 UTC 2009  James H. Hill  <hillj@dre.vanderbilt.edu>

        * XSCRT/XSCRT/XML.hpp:
        * XSCRT/XSCRT/utils/Buffer_Writer_T.h:
        * XSCRT/XSCRT/utils/Buffer_Writer_T.cpp:
        * XSCRT/XSCRT/utils/Writer_T.h:
        * XSCRT/XSCRT/utils/Writer_T.cpp:

          . Fixed build errors with using the writer template with
            Xerces 3.x

Wed May 27 13:44:10 UTC 2009  James H. Hill  <hillj@dre.vanderbilt.edu>

        * contrib:

          . Removed the external dependency on utilities located in ACE.

Wed May 27 13:41:07 UTC 2009  James H. Hill  <hillj@isis.vanderbilt.edu>

        * contrib/Utility.mpc:
